--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,15 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build and Push Docker Image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: employee_demo
+          IMAGE_TAG: team4-api
+          DB_NAME: ${{secrets.DB_NAME}}
+          DB_HOST: ${{secrets.DB_HOST}}
+          DB_USERNAME: ${{secrets.DB_USERNAME}}
+          DB_PASSWORD: ${{secrets.DB_PASSWORD}}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build --build-arg DB_NAME=${DB_NAME} --build-arg DB_HOST=${DB_HOST} --build-arg DB_USERNAME=${DB_USERNAME} --build-arg DB_PASSWORD=${DB_PASSWORD} -t $ECR_REGISTERY/ECR_RESPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTERY/ECR_RESPOSITORY:$IMAGE_TAG
