--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,7 +41,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Build and Push Docker Image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTERY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: employee_demo
           IMAGE_TAG: team4-api
           DB_NAME: ${{secrets.DB_NAME}}
@@ -49,5 +49,5 @@ jobs:
           DB_USERNAME: ${{secrets.DB_USERNAME}}
           DB_PASSWORD: ${{secrets.DB_PASSWORD}}
         run: |
-          docker build --build-arg DB_NAME=${DB_NAME} --build-arg DB_HOST=${DB_HOST} --build-arg DB_USERNAME=${DB_USERNAME} --build-arg DB_PASSWORD=${DB_PASSWORD} -t $ECR_REGISTERY/ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTERY/ECR_REPOSITORY:$IMAGE_TAG
+          docker build --build-arg DB_NAME=${DB_NAME} --build-arg DB_HOST=${DB_HOST} --build-arg DB_USERNAME=${DB_USERNAME} --build-arg DB_PASSWORD=${DB_PASSWORD} -t $ECR_REGISTERY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTERY/$ECR_REPOSITORY:$IMAGE_TAG
